gitops/apps/dashy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dashy
  labels:
    name: dashy
